# Microfabricator-HMI

./: .gitignore  Action.qml  CMakeLists.txt  Card.qml  CheckListItem.qml  Checklist.qml  Drawer.qml  ExposureElapse.qml  GlobalState.qml  History.cpp  History.h  LICENSE  MainApp.qml  MicrofabricatorHMI.pro  MicrofabricatorHMI.pro.qtds  ModuleHistory.cpp  ModuleHistory.h  OpCard.qml  Progress.qml  README.md  Settings.cpp  Settings.h  SplashScreen.qml  StaticUsbPortsSetup(Note).md  StatusBar.qml  Style.qml  UIStyle.qml  VibrationPlot.qml  gpio.cpp  gpio.h  gpio_fan_pump.cpp  gpio_fan_pump.h  lightsensor.cpp  lightsensor.h  main.cpp  main.qml  mfab.db  onFans.sh  package.json  qml.qrc  (+15 more)
Docs/: StaticUsbPortsSetup(Note).md
Drawers/: LightEngineOk.qml  LightWaferAlignment.qml  MaskPlaced.qml  SetDuration.qml  SetPower.qml  TrayClosed.qml  VibrationMonitor.qml  WaferMaskDistance.qml  WaferPlaced.qml
Micro-fabricator/: .gitignore
build-Micro-fabricator-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
components/: Action.qml  ActionButton.qml  Button.qml  Card.qml  Checklist.qml  CustomSlider.qml  Drawer.qml  ExposureElapse.qml  HistoryItem.qml  InfoButton.qml  InfoOverlay.qml  InfoOverlayWide.qml  MainApp.qml  MaintainanceCard.qml  OpCard.qml  PowerButton.qml  PowerOnSelfTest.qml  Progress.qml  ProgressIndicator.qml  RunCard.qml  ShuttingDown.qml  SplashScreen.qml  StatusBar.qml  UIStyle.qml  VibrationPlot.qml
devlog/: 1-init.txt  2-protobuf.txt  3-node.txt  4-node-socket.txt
(+113 files in other folders)
